--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "oranges",
   "version": "0.1.0",
-  "homepage": "https://Ajay-Kowshik.github.io/Rotting-Oranges",
+  "homepage": "https://Ajay-Kowshik.github.io/Rotting_Oranges",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
